--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
+    "@monaco-editor/react": "^4.6.0",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-checkbox": "^1.1.1",
@@ -33,6 +34,7 @@
     "clsx": "^2.1.0",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.446.0",
+    "monaco-editor": "^0.52.0",
     "next": "14.2.1",
     "next-themes": "^0.3.0",
     "react": "^18",
